Some issued in, import { NativeGeocoderReverseResult } from '@ionic-native/native-geocoder/ngx'

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
   "name": "FetchAddressCoordinates",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "angular"
 }
